Bug fix counter center aligned

--- a/public/styles/sass/count.css
+++ b/public/styles/sass/count.css
@@ -11,7 +11,7 @@
   .countDown #clockdiv {
     font-family: sans-serif;
     color: #fff;
-    display: inline-block;
+    /*display: inline-block;*/
     font-weight: 100;
     text-align: center;
     font-size: 30px; }
